@@ -1,5 +1,16 @@
 2007-06-18  Markus Deuling  <deuling@de.ibm.com>
 
+	* gdbarch.sh (DEPRECATED_FUNCTION_START_OFFSET): Replace by
+	gdbarch_deprecated_function_start_offset.
+	* symtab.c (find_function_start_sal)skip_prologue_using_sal): Likewise.
+	* linespec.c (minsym_found): Likewise.
+	* infrun.c (handle_inferior_event): Likewise.
+	* infcall.c (find_function_addr): Likewise.
+	* cli/cli-cmds.c (disassemble_command): Likewise.
+	* gdbarch.c, gdbarch.h: Regenerate.
+
+2007-06-18  Markus Deuling  <deuling@de.ibm.com>
+
 	* gdbarch.sh (DEPRECATED_REG_STRUCT_HAS_ADDR): Replace by
 	gdbarch_deprecated_reg_struct_has_addr.
 	* infcall.c (call_function_by_hand): Likewise.
